# opal

./: CHANGELOG  CMakeLists.txt  Common.h  Complex.h  Config.h.in  LICENSE  Makefile  Opal.cpp  Opal.h  README.md  TODO.txt  Unity.cpp  Unity.h  basicSimulation.cpp  basicSimulation.h  cmake_install.cmake  curvedFlatMeshSimulation.cpp  curvedFlatMeshSimulation.h  curvedMeshSimulation.cpp  curvedMeshSimulation.h  flatSimulation.cpp  flatSimulation.h  generation.cu  generationMultiTransmitter.cu  logTracer.cpp  logTracer.h  main.cpp  meshDefinition.h  multiTransmitter.cu  multitransmitter.cpp  multitransmitter.h  opalSimulation.cpp  opalSimulation.h  optixGeometryTriangles.cu  propagationKernels.cu  ptxUtil.cpp  ptxUtil.h  rayDensityNormalizationSimulation.cpp  rayDensityNormalizationSimulation.h  raySphere.cpp  (+20 more)
doc/: INSTALL.md
flatbuffers/: AddDynamicMeshGroup.fbs  BaseTypes.fbs  CreateVehicle.fbs  DestroyVehicle.fbs  DynamicMesh.fbs  ExternalTime.fbs  FinishDynamicMeshGroup.fbs  Header.fbs  RemoveDynamicMeshGroup.fbs  StaticMesh.fbs  UpdateTransformInGroup.fbs  UseOpal.fbs  VehicleState.fbs
meshes/: CC_ME_Body_R4-i.txt  CC_ME_Body_R4-v.txt  CC_ME_Wheel_BL-v.txt  CC_ME_Wheel_BR-i.txt  CC_ME_Wheel_BR-v.txt  CC_ME_Wheel_FL-v.txt  CC_ME_Wheel_FR-i.txt  CC_ME_Wheel_FR-v.txt  Cube-i.txt  Cube-v.txt  FullCylinder10000-i.txt  FullCylinder10000-v.txt  FullCylinder2000-i.txt  FullCylinder2000-pd1.txt  FullCylinder2000-pd2.txt  FullCylinder2000-v.txt  HalfCylinder10-i.txt  HalfCylinder10-v.txt  HalfCylinder100-i.txt  HalfCylinder100-v.txt  HalfCylinder1000-i.txt  HalfCylinder1000-pd1.txt  HalfCylinder1000-pd2.txt  HalfCylinder1000-v.txt  HalfCylinder10c-pd1.txt  HalfCylinder10c-pd2.txt  HalfCylinder10c-t.txt  HalfCylinder10c-v.txt  Plane-v.txt  tunnel-i.txt  tunnel-t.txt  vertcube.txt
omnet/inet/examples/opal/: OpalTest.ned  omnetpp.ini
omnet/inet/examples/veneris/: VenerisServer.ned  veneris.ini
omnet/inet/src/inet/common/veneris/: ExecutionServer.cc  ExecutionServer.h  ExecutionServer.ned  ExternalClockScheduler.cc  ExternalClockScheduler.h  VenerisExternalMobility.cc  VenerisExternalMobility.h  VenerisExternalMobility.ned  VenerisServer.cc  VenerisServer.h  VenerisServer.ned
omnet/inet/src/inet/common/veneris/messages/: AddDynamicMeshGroup_generated.h  BaseTypes_generated.h  CreateVehicle_generated.h  DestroyVehicle_generated.h  DynamicMesh_generated.h  ExternalTime_generated.h  FinishDynamicMeshGroup_generated.h  Header_generated.h  RemoveDynamicMeshGroup_generated.h  StaticMesh_generated.h  UpdateTransformInGroup_generated.h  UseOpal_generated.h  VehicleState_generated.h
omnet/inet/src/inet/opaltest/: OpalNode.ned  OpalTestPacketGenerator.cc  OpalTestPacketGenerator.h  OpalTestPacketGenerator.ned
omnet/inet/src/inet/physicallayer/common/packetlevel/: OpalRadioMedium.cc  OpalRadioMedium.h  OpalRadioMedium.ned
optix/: Complex.h  configuration.h  curvedFunctions.h  penetrationFunctions.h  receiverFunctions.h  reflectionFunctions.h  traceFunctions.h  triangleFunctions.h
optix/basic/: generation.cu  generationGPU.cu  receiver.cu  triangle.cu
optix/intersect/: exception.cu  optixGeometryTriangles.cu  optixGeometryTrianglesCurved.cu  optixTriangle.cu  optixTriangleCurved.cu  sphere.cu
optix/log/: curved.cu  generation.cu  receiver.cu  traceLogFunctions.h  triangle.cu
optix/polarization/: generation.cu  generationGPU.cu  linearPolarizationFunctions.h  receiver.cu  triangle.cu
optix/polarization/curved/: curved.cu  generation.cu  generationGPU.cu  receiver.cu  triangle.cu
optix/polarization/diffraction/: singleDiffraction.cu
optix/polarization/rdn/: .swp  curved.cu  generation.cu  generationGPU.cu  power.cu  power_mem.cu  power_mem_noa.cu  rdnrandom.h  receiver.cu  triangle.cu  triangle.cu.bak
polarization/: generation.cu  linearPolarizationFunctions.h  optixGeometryTriangles.cu  receiver.cu  sphere.cu  tracePolarizationFunctions.h  triangle.cu
tests/: antennaGain.cpp  antennaGain.h  curvature.cpp  curvature.h  depolarization.cpp  depolarization.h  diffraction.cpp  diffraction.h  dudley.cpp  dudley.h  rdn.cpp  rdn.h  roux.cpp  roux.h  tests.cpp  tests.h  tunnels.cpp  tunnels.h  tunnels.old  tunnelsBase.cpp  tunnelsBase.h
unity/Opal/: DynamicMesh.cs  OpalInterface.cs  OpalManager.cs  OpalMeshProperties.cs  Receiver.cs  Singleton.cs  StaticMesh.cs  Transmitter.cs  VenerisOpalManager.cs  VenerisTransceiver.cs
unity/Tests/: ConstantSpeedMover.cs  ConstantStepMover.cs  FileResultLogger.cs  IResultLogger.cs  PowerLogger.cs  ReadPaths.cs  ShowMeshTransform.cs
unity/Veneris/: Singleton.cs
unity/Veneris/Communications/: ExternalSimClient.cs  MessageManager.cs
unity/Veneris/Communications/Messages/: AddDynamicMeshGroup.cs  CreateVehicle.cs  DestroyVehicle.cs  DynamicMesh.cs  ExternalTime.cs  FinishDynamicMeshGroup.cs  Header.cs  MaterialEMP.cs  Matrix4x4.cs  RemoveDynamicMeshGroup.cs  StaticMesh.cs  UpdateTransformInGroup.cs  UseOpal.cs  Vec3.cs  Vec4.cs  VehicleState.cs  VenerisMessageTypes.cs
